--- a/Backers/Dockerfile
+++ b/Backers/Dockerfile
@@ -1,13 +1,11 @@
-FROM node:20-alpine AS base
+FROM node:20-alpine
+
 WORKDIR /app
 
-COPY package.json package-lock.json* pnpm-lock.yaml* yarn.lock* ./
-RUN npm install
+COPY package.json ./
+RUN npm install --omit=dev
 
 COPY . .
 
-RUN npm run prisma:generate
-RUN npm run build
-
-EXPOSE 8080
-CMD ["node", "dist/index.js"]
+EXPOSE 5174
+CMD ["node", "index.js"]
