--- a/Backers/.env
+++ b/Backers/.env
@@ -1,5 +1,7 @@
+SESSION_SECRET=your-secure-secret
+
 PORT=5174
-ORIGIN=http://localhost:5173
+ORIGIN=http://localhost:5173,http://127.0.0.1:5173
 
 PGHOST=localhost
 PGPORT=5432
